# Fish-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-lock.example.txt  requirements-model.txt  requirements.txt
config/: backup_model_review_llm_cfg.json  enhanced_gradcam_llm_cfg.json  enhanced_quality_check_llm_cfg.json  fish_region_detection_llm_cfg.json  freshness_classification_llm_cfg.json  multi_region_fusion_llm_cfg.json  recommendation_generation_llm_cfg.json  report_generation_llm_cfg.json  structured_analysis_llm_cfg.json  temporal_analysis_llm_cfg.json
docs/: FishFreshNetV1_Integration_Guide.md  Workflow_Optimization_Complete_Report.md
installer/: Fish-Agent-installer.iss  Fish-Agent.spec  README.md  desktop_app.py  launcher_app.py
scripts/: http_run.sh  local_run.sh  pack.sh  setup.sh
src/: main.py
src/api/: model_service.py
src/graphs/: graph.py  state.py  utils.py
src/graphs/nodes/: __init__.py  backup_model_review_node.py  enhanced_gradcam_node.py  enhanced_quality_check_node.py  feedback_loop_node.py  fish_region_detection_node.py  freshness_classification_node.py  image_preprocess_node.py  image_upload_node.py  low_confidence_prompt_node.py  multi_region_fusion_node.py  quality_unqualified_node.py  recommendation_generation_node.py  report_generation_node.py  result_visualization_node.py  structured_analysis_node.py  temporal_analysis_node.py
src/models/: fishfreshnet_model.py
src/tools/: fishfreshnet_client.py  llm_client.py
src/utils/file/: file.py
